[APHL-1326] code quality